--- a/index.html
+++ b/index.html
@@ -2,16 +2,21 @@
 <html lang="en">
     <head>
         <title>Search</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link href="styles.css" rel="stylesheet">
     </head>
     <body>
-        <div id="page-links">
+        <div id="top">
             <a href="image-search.html">Google Image Search</a>
             <a href="advanced-search.html">Google Advanced Search</a>
         </div>
-        <form action="https://www.google.com/search">
-            <input type="text" name="q">
-            <input type="submit" value="Google Search">
-        </form>
+        <div id="mid">
+            <form id="search-form" action="https://www.google.com/search">
+                <input type="text" name="q">
+                <input type="submit" value="Search">
+            </form>
+        </div>
+        <div id="bottom">
+
+        </div>
     </body>
 </html>
