--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
         <div id="mid">
             <form id="search-form" action="https://www.google.com/search">
                 <input type="text" name="q">
-                <input type="submit" value="Search">
+                <div>
+                    <input type="submit" value="Search">
+                    <input type="submit" name="btnI" value="I'm Feeling Lucky">
+                </div>
             </form>
         </div>
         <div id="bottom">
